@@ -3,13 +3,13 @@
  * Copyright (c) 2017 BMW Car IT GmbH.
  *
  * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * are made available under the terms of the Eclipse Public License v2.0
  * and Eclipse Distribution License v1.0 which accompany this distribution.
  *
  * The Eclipse Public License is available at
- *    http://www.eclipse.org/legal/epl-v10.html
+ *    https://www.eclipse.org/legal/epl-2.0
  * and the Eclipse Distribution License is available at
- *   http://www.eclipse.org/org/documents/edl-v10.php.
+ *   https://www.eclipse.org/org/documents/edl-v10.php
  */
 
 package org.eclipse.paho.mqttv5.client;
@@ -101,7 +101,7 @@ public class TimerPingSender implements MqttPingSender{
 		public void run() {
 			Thread.currentThread().setName("MQTT Ping: " + clientid);
 			//@Trace 660=Check schedule at {0}
-			log.fine(CLASS_NAME, methodName, "660", new Object[]{ new Long(System.nanoTime()) });
+			log.fine(CLASS_NAME, methodName, "660", new Object[]{ Long.valueOf(System.nanoTime()) });
 			comms.checkForActivity();
 		}
 	}
@@ -113,7 +113,7 @@ public class TimerPingSender implements MqttPingSender{
 			String originalThreadName = Thread.currentThread().getName();
 			Thread.currentThread().setName("MQTT Ping: " + clientid);
 			//@Trace 660=Check schedule at {0}
-			log.fine(CLASS_NAME, methodName, "660", new Object[]{ new Long(System.nanoTime()) });
+			log.fine(CLASS_NAME, methodName, "660", new Object[]{ Long.valueOf(System.nanoTime()) });
 			comms.checkForActivity();
 			Thread.currentThread().setName(originalThreadName);
 		}
